--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".InformationActivity" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_home"></activity>
     </application>
 
